added material package and used material table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h3>Demo UI fro Loan Decision</h3>
 
-<button (click)="getRoaProfit()">Click Me</button>
+<h1 class="heading">Loan Decision DEMO</h1>
+<app-response-list></app-response-list>
 
