--- a/src/app/response-list/response-list.component.scss
+++ b/src/app/response-list/response-list.component.scss
@@ -1,5 +1,17 @@
 
 .demo-table {
-    width: 80%;
-    margin:0 10% 0 10%
+    width: 99%;
+    margin:0 1% 0 1%
+  }
+
+  .column-header{
+    border: #e2e2e2 1px solid;
+
+  }
+  th.mat-header-cell{
+font-size: 12px;
+color:black;
+  }
+  .mat-cell{
+    text-align: center;
   }
