--- a/src/app/loanDecision/renewal/renewal-component.html
+++ b/src/app/loanDecision/renewal/renewal-component.html
@@ -1,3 +1,4 @@
+<h2>Renewal Loan Decision</h2>
 <div class="example-container">
   <mat-form-field appearance="fill">
     <mat-label>Branch Id</mat-label>
