added form styles

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent">
+<mat-toolbar color="primary">
   <h1 class="heading">Loan Decision DEMO</h1>
   <span class="example-spacer"></span>
   <button mat-button class="example-icon" [routerLink]="['/renewal']" routerLinkActive="router-link-active"  >
