--- a/src/app/shared/form/tmpl-form.html
+++ b/src/app/shared/form/tmpl-form.html
@@ -1,28 +1,28 @@
-<form novalidate="novalidate" [formGroup]="_localDataForm">
-    <div *ngFor="let field of _localDataModel.fields| sharedFilterPipe:filterFormField">
-        <div *ngIf="field.controlType==sharedFormCtrlType.INPUT" class="example-container">
-            <mat-form-field appearance="fill">
+<form novalidate="novalidate" [formGroup]="_localDataForm" class="tmpl-form-container">
+    <div *ngFor="let field of _localDataModel.fields| sharedFilterPipe:filterFormField" >
+        <div *ngIf="field.controlType==sharedFormCtrlType.INPUT">
+            <mat-form-field appearance="outline"  class="tmpl-form-item">
                 <mat-label>{{field.label}}</mat-label>
-                <input matInput type="{{field.type}}"  formControlName="{{field.name}}"/>
+                <input matInput type="{{field.type}}"  formControlName="{{field.name}}" autocomplete="off"/>
             </mat-form-field>
         </div>
-        <div *ngIf="field.controlType==sharedFormCtrlType.DATEPICKER" class="example-container">
-            <mat-form-field appearance="fill">
+        <div *ngIf="field.controlType==sharedFormCtrlType.DATEPICKER" >
+            <mat-form-field appearance="outline" class="tmpl-form-item">
                 <mat-label>{{field.label}}</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="{{field.name}}"/>
+                <input matInput [matDatepicker]="picker" formControlName="{{field.name}}"autocomplete="off"/>
                 <mat-datepicker-toggle matSuffix="matSuffix" [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
-        <div *ngIf="field.controlType==sharedFormCtrlType.CHECKBOX" class="example-container">
-            <mat-form-field appearance="fill">
+        <div *ngIf="field.controlType==sharedFormCtrlType.CHECKBOX" >
+            <mat-form-field appearance="outline" class="tmpl-form-item">
                 <mat-checkbox class="example-margin" [(ngModel)]="field.name"formControlName="{{field.name}}">{{field.label}}</mat-checkbox>
             </mat-form-field>
         </div>
-        <div *ngIf="field.controlType==sharedFormCtrlType.TEXTAREA" class="example-container">
-            <mat-form-field appearance="fill">
+        <div *ngIf="field.controlType==sharedFormCtrlType.TEXTAREA" >
+            <mat-form-field appearance="outline" class="tmpl-form-item">
                 <mat-label>{{field.label}}</mat-label>
-                <textarea matInput clearInput="true" formControlName="{{field.name}}"></textarea>
+                <textarea matInput clearInput="true" formControlName="{{field.name}}"autocomplete="off"></textarea>
             </mat-form-field>
         </div>
         <div >
@@ -30,13 +30,10 @@
                 {{_errMessage}}
             </span>
         </div>
-
-
     </div>
-    <div>
-      <button mat-raised-button="mat-raised-button" color="primary" (click)="formSubmit()" [disabled]="!_localDataForm.valid">
-         {{_submitFormTitle}}
-        </button>
-  </div>
 </form>
-
+<div>
+  <button mat-raised-button="mat-raised-button" class="tmpl-form-submit" color="primary" (click)="formSubmit()" [disabled]="!_localDataForm.valid">
+     {{_submitFormTitle}}
+    </button>
+</div>
