added template grid

--- a/src/app/loanDecision/new-borrower-renewal/new-borrower-renewal.component.html
+++ b/src/app/loanDecision/new-borrower-renewal/new-borrower-renewal.component.html
@@ -1,1 +1,15 @@
-<p>new-borrower-renewal works!</p>
+<h2>New Borrower Renewal Loan Decision</h2>
+<tmpl-form
+[formData]="formData"
+[formSubmitType]="formSubmitType"
+[dataModel]="dataModel"
+[submitFormTitle]="submitFormTitle"
+(submitForm)="submitForm($event)"
+></tmpl-form>
+
+<p class="errorDisplay">{{errMsg}}</p>
+
+<div class="table-container" *ngIf="localDataSource.columns.length>0">
+<tmpl-grid [inputDataSource]="dataSource">
+  </tmpl-grid>
+</div>
