--- a/src/app/loanDecision/renewal/renewal-component.html
+++ b/src/app/loanDecision/renewal/renewal-component.html
@@ -8,16 +8,7 @@
 ></tmpl-form>
 <p class="errorDisplay">{{errMsg}}</p>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-  <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
-    <th mat-header-cell *matHeaderCellDef  class="column-header">
-      {{column.header}}
-    </th>
-    <td mat-cell *matCellDef="let row">
-      {{column.cell(row)}}
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns" sticky:true></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<div class="table-container" *ngIf="localDataSource.columns.length>0">
+  <tmpl-grid  [inputDataSource]="dataSource">
+    </tmpl-grid>
+  </div>
