--- a/src/app/loanDecision/former-borrower/former-borrower.component.html
+++ b/src/app/loanDecision/former-borrower/former-borrower.component.html
@@ -1,1 +1,16 @@
-<p>former-borrower works!</p>
+<h2>Former Borrower Loan Decision</h2>
+<h2>Coming Soon!</h2>
+<!-- <tmpl-form
+[formData]="formData"
+[formSubmitType]="formSubmitType"
+[dataModel]="dataModel"
+[submitFormTitle]="submitFormTitle"
+(submitForm)="submitForm($event)"
+></tmpl-form>
+
+<p class="errorDisplay">{{errMsg}}</p>
+
+<div class="table-container" *ngIf="localDataSource.columns.length>0">
+<tmpl-grid [inputDataSource]="dataSource">
+  </tmpl-grid>
+</div> -->
