--- a/src/app/shared/data-grid/tmpl-grid.html
+++ b/src/app/shared/data-grid/tmpl-grid.html
@@ -1,11 +1,19 @@
 
 
-<div class="mat-elevation-z8 grid-container">
+<div >
   <mat-spinner id="dataTableLoadingSpinner" *ngIf="isLoadingResults"></mat-spinner>
+  <div *ngIf="showFilter">
+    <mat-form-field appearance="standard">
+      <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)">
+      </mat-form-field>
+    </div>
 
-  <table mat-table *ngIf="!isLoadingResults" [dataSource]="localDataTable.rows" multiTemplateDataRows
-   matSort class="mat-elevation-z8">
-    <ng-container matColumnDef="select" sticky>
+  <table class="mat-elevation-z8" mat-table *ngIf="!isLoadingResults" [dataSource]="localDataTable.rows" multiTemplateDataRows
+   matSort (matSortChange)="sortData($event)">
+   <caption> {{localDataTable.tableCaption}} </caption>
+
+   <ng-container matColumnDef="select" sticky>
       <th mat-header-cell *matHeaderCellDef >
         <mat-checkbox (change)="onAllCheckboxChanged($event)" [checked]="selectedRowData.hasValue() && isAllSelected()"
           [indeterminate]="selectedRowData.hasValue() && !isAllSelected()">
@@ -16,7 +24,7 @@
           [checked]="selectedRowData.isSelected(row)">
         </mat-checkbox>
       </td>
-      <td mat-footer-cell *matFooterCellDef> </td>
+      <td mat-footer-cell *matFooterCellDef > </td>
     </ng-container>
 
     <ng-container matColumnDef="expand" sticky>
@@ -28,9 +36,8 @@
       <td mat-footer-cell *matFooterCellDef> </td>
     </ng-container>
 
-    <ng-container *ngFor="let col of localDataTable.columns" [matColumnDef]="col.header" sticky>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{col.header}} </th>
-
+    <ng-container *ngFor="let col of localDataTable.columns" [matColumnDef]="col.header" [sticky]="col.sticky">
+      <th mat-header-cell *matHeaderCellDef [mat-sort-header]="col.field" id="{{col.field}}"> {{col.header}} </th>
       <td mat-cell *matCellDef="let row">
         <span *ngIf="!col.isViewDetailLink"> {{row[col.field]}}</span>
 
@@ -59,17 +66,7 @@
           </ng-template>
         </mat-menu>
       </td>
-      <td mat-footer-cell *matFooterCellDef> </td>
-    </ng-container>
-
-
-    <!-- Filter header Column -->
-    <ng-container matColumnDef="filter-column">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-form-field>
-          <input matInput (keyup)="applyFilter($event)">
-        </mat-form-field>
-        </th>
+      <!-- <td mat-footer-cell *matFooterCellDef> </td> -->
     </ng-container>
 
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
@@ -81,10 +78,7 @@
       </td>
     </ng-container>
 
-
-
     <tr mat-header-row *matHeaderRowDef="tableColHeaders; sticky: true"></tr>
-    <!-- <tr mat-header-row *matHeaderRowDef="['filter-column']" class="grid-second-header-row"></tr> -->
     <tr mat-row *matRowDef="let row; columns: tableColHeaders;" class="grid-element-row"
       [class.grid-expanded-row]="expandedElement === row"> </tr>
 
