--- a/src/app/loanDecision/new-borrower-renewal/new-borrower-renewal.component.html
+++ b/src/app/loanDecision/new-borrower-renewal/new-borrower-renewal.component.html
@@ -1,5 +1,5 @@
 <h2>New Borrower Renewal Loan Decision</h2>
-<p ="errorDisplay">{{errMsg}}</p>
+<p class="errorDisplay">{{errMsg}}</p>
 
 <tmpl-form
 [formData]="formData"
