started changing to template

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,9 @@
 <mat-toolbar color="primary">
-  <h1 class="heading">Loan Decision DEMO</h1>
+  <h1 class="heading">Header</h1>
   <span class="example-spacer"></span>
-  <button mat-button class="example-icon" [routerLink]="['/renewal']" routerLinkActive="router-link-active"  >
-    Renewal
+  <button mat-button class="example-icon" [routerLink]="['/sample-page']" routerLinkActive="router-link-active"  >
+    Sample Page
   </button>
-  <button mat-button class="example-icon" [routerLink]="['/newBorrowerRenewal']" routerLinkActive="router-link-active"  >
-    New Borrower Renewal
-  </button>
-  <button mat-button class="example-icon" [routerLink]="['/newBorrower']" routerLinkActive="router-link-active"  >
-    New Borrower
-  </button>
-  <button mat-button class="example-icon" [routerLink]="['/formerBorrower']" routerLinkActive="router-link-active"  >
-    Former Borrower
-  </button>
+
 
 </mat-toolbar>
