--- a/src/app/pages/sample-page/sample-page.component.html
+++ b/src/app/pages/sample-page/sample-page.component.html
@@ -1,4 +1,4 @@
-<h2>New Borrower Loan Decision</h2>
+<h2>Sample Page</h2>
 <p class="errorDisplay">{{errMsg}}</p>
 
 <tmpl-form
@@ -10,6 +10,6 @@
 ></tmpl-form>
 
 <div class="table-container" *ngIf="localDataSource.columns.length>0">
-<tmpl-grid [inputDataSource]="dataSource">
-  </tmpl-grid>
-</div>
+  <tmpl-grid  [inputDataSource]="dataSource">
+    </tmpl-grid>
+  </div>
