added tailwind css

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,12 @@
 <mat-toolbar color="primary">
   <h1 class="heading">Header</h1>
   <span class="example-spacer"></span>
-  <button mat-button class="example-icon" [routerLink]="['/sample-page']" routerLinkActive="router-link-active"  >
+  <button
+    mat-button
+    class="example-icon"
+    [routerLink]="['/sample-page']"
+    routerLinkActive="router-link-active"
+  >
     Sample Page
   </button>
-
-
 </mat-toolbar>
