--- a/src/app/pages/sample-page/sample-page.component.html
+++ b/src/app/pages/sample-page/sample-page.component.html
@@ -1,14 +1,15 @@
 <h2 class="page-header">Sample Page</h2>
 <p class="errorDisplay">{{ errMsg }}</p>
+<div class="form-container">
+  <studio-ui-tmpl-form
+    [formData]="formData"
+    [formSubmitType]="formSubmitType"
+    [dataModel]="dataModel"
+    [submitFormTitle]="submitFormTitle"
+    (submitForm)="submitForm($event)"
+  ></studio-ui-tmpl-form>
+</div>
 
-<studio-ui-tmpl-form
-  [formData]="formData"
-  [formSubmitType]="formSubmitType"
-  [dataModel]="dataModel"
-  [submitFormTitle]="submitFormTitle"
-  (submitForm)="submitForm($event)"
-></studio-ui-tmpl-form>
-
-<div class="table-container" *ngIf="localDataSource.columns.length > 0">
+<div class="grid-container" *ngIf="localDataSource.columns.length > 0">
   <studio-ui-tmpl-grid [inputDataSource]="dataSource"> </studio-ui-tmpl-grid>
 </div>
