added css animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<!-- <div class="animated-block"></div> -->
 <app-header></app-header>
 <main>
-<router-outlet></router-outlet>
-  <main>
+  <router-outlet></router-outlet>
+  <main></main>
+</main>
